fixed terms and condition alignment broken issue

--- a/src/css/view/login-register.scss
+++ b/src/css/view/login-register.scss
@@ -220,6 +220,16 @@ $sizes: 10, 20, 25, 30, 33, 40, 50, 60, 66, 70, 75, 80, 90, 100;
         }
     }
 
+    .eael_accept_tnc_wrap{
+        display: flex;
+        margin-bottom: 1rem;
+        .eael-lr-tnc-link{
+            margin-top: -3px;
+            margin-left: 5px;
+            display: inline-block;
+        }
+    }
+
     .eael-lr-footer{
         display: flex;
     }
